<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg"
        tools:context=".ui.chat.login.LoginActivity">

    <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        <LinearLayout
                android:id="@+id/jid_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jabber_id"/>

            <AutoCompleteTextView
                    android:id="@+id/jid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_jid"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:layout_gravity="center_horizontal"/>


            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:layout_gravity="center_horizontal"
                    android:importantForAutofill="no"/>

            <Button
                    android:id="@+id/jid_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:background="@drawable/custom_botton"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000"/>

            <TextView
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/chat_regTxt"
                    android:layout_marginTop="50dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:focusable="true"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>