...
      app:cardCornerRadius="8dp">

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/campus_fragment_slideshow"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/campus_map_button"
      android:layout_width="0dp"
      android:layout_height="150dp"
      android:layout_columnWeight="1"
      android:layout_marginBottom="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
...
